tests/invalid-types/src/wrap/Module/index.ts
import {
  Args_boolMethod,
  Args_intMethod,
  Args_uIntMethod,
  Args_bytesMethod,
  Args_arrayMethod
} from "./serialization";

export {
  Args_boolMethod,
  Args_intMethod,
  Args_uIntMethod,
  Args_bytesMethod,
  Args_arrayMethod
};
